Fix remaining bad homepage overflows

--- a/static/css/responsive.scss
+++ b/static/css/responsive.scss
@@ -15,6 +15,7 @@
     }
     .video,
     .video-screenshot {
+      max-width: 100%;
       min-width: 100%;
     }
     .video:before {
